# rose

./: .gitignore  CMakeLists.txt  rose_config.h.in.cmake
config/: create_system_headers  rose_edg_required_macros_and_functions.h.in  support-nanos-omp.m4  support-nanox-omp.m4  support-rose.m4
docs/Rose/: OpenMPsupport.tex  rose.cfg.in
projects/: CMakeLists.txt
projects/minitermite/regression/: make_rule.inc
projects/minitermite/regression/base/: unprintable.c
projects/minitermite/src/: RoseToTerm.cc  TermToRose.cc  find-enums.cc  haskell-signatures.pl  make_rule.inc  src2term.cc  term2src.cc
rose-diff-04-04-13/: JavaParserActionROSE.C  JavaParserActionROSE.C.diff  JavaParserSupport.java  JavaParserSupport.java.diff  Type.code  Type.code.diff  diff.patch  java_support.C  java_support.C.diff  java_support.h.diff
src/: CMakeLists.txt  rose.h
src/3rdPartyLibraries/MSTL/: TreeTraversal.h
src/3rdPartyLibraries/fortran-parser/: CMakeLists.txt
src/3rdPartyLibraries/java-parser/: JavaParser.java  JavaParserSupport.java  JavaTraversal.java  ecjASTVisitor.java
src/ROSETTA/: astNodeList
src/ROSETTA/Grammar/: BinaryInstruction.code  Common.code  Expression.code  LocatedNode.code  Node.code  Statement.code  Support.code  Type.code  grammarNewDeleteOperatorMacros.macro
src/ROSETTA/src/: CMakeLists.txt  buildStorageClasses.C  expression.C  grammar.C  node.C  statement.C
src/backend/asmUnparser/: AsmUnparser.h  AsmUnparser_compat.h
src/backend/unparser/: unparser.C  unparser.h
src/frontend/: CMakeLists.txt
src/frontend/BinaryDisassembly/: RoseBin_support.h
src/frontend/Disassemblers/: Disassembler.h  Expressions.C  Partitioner.C  Partitioner.h  SgAsmFunction.C
src/frontend/ECJ_ROSE_Connection/: CMakeLists.txt  JavaParserActionROSE.C  java_support.C  java_support.h
src/frontend/OpenFortranParser_SAGE_Connection/: CMakeLists.txt  FortranParserActionROSE.C  fortran_support.C
src/frontend/SageIII/: CMakeLists.txt  OmpAttribute.C  OmpAttribute.h  attachPreprocessingInfoTraversal.C  fake_EDG.h  ompAstConstruction.cpp  ompAstConstruction.h  omplexer.ll  ompparser.yy  rose_attributes_list.h  rosedll.h  rtiHelpers.h  sageSupport.C
src/frontend/SageIII/astFileIO/: StorageClassMemoryManagement.h
src/frontend/SageIII/astPostProcessing/: astPostProcessing.C  astPostProcessing.h
src/frontend/SageIII/astVisualization/: wholeAST.C  wholeAST.h
src/frontend/SageIII/sageInterface/: sageBuilder.C  sageBuilder.h  sageFunctors.h  sageGeneric.h  sageInterface.C  sageInterface.h
src/frontend/SageIII/sage_support/: cmdline.cpp  sage_support.cpp
src/frontend/SageIII/virtualCFG/: virtualBinCFG.C  virtualCFG.h
src/midend/astDiagnostics/: AstConsistencyTests.C  AstPerformance.h  AstStatistics.C
src/midend/astProcessing/: AstAttributeMechanism.h  AstDOTGeneration.C
src/midend/astQuery/: nodeQuery.h
src/roseExtensions/: CMakeLists.txt
src/roseExtensions/sqlite3x/: CMakeLists.txt
src/roseSupport/: IncludeDirective.C  transformationSupport.h  utility_functions.h
src/util/: CMakeLists.txt  rose_strtoull.h
src/util/commandlineProcessing/: commandline_processing.C  commandline_processing.h
src/util/stringSupport/: string_functions.cpp  string_functions.h
tests/CompileTests/: Makefile.am
tests/CompileTests/CudaTests/: Makefile.am
tests/CompileTests/Cxx_tests/: Makefile.am
tests/CompileTests/Fortran_tests/: Makefile.am  test2012_Rice_derived-type-array-2.f90  test2012_Rice_derived-type-array-3.f90  test2012_Rice_derived-type-array-4.f90  test2012_Rice_derived-type-array-5.f90  test2012_Rice_extern_func_call.f90  test2012_Rice_if-scope.f90
tests/CompileTests/OpenMP_tests/: Makefile.am  lockarray.c
tests/CompileTests/OpenMP_tests/nanos/: Makefile.am  deps_array_access_01.c  deps_sections_01.c  deps_sections_02.c  deps_sections_03.c  deps_sections_04.c  deps_shaping_01.c  deps_shaping_02.c
tests/CompileTests/virtualCFG_tests/: Makefile.am
tests/roseTests/ompLoweringTests/: Makefile.am
tests/roseTests/ompLoweringTests/nanos/: Makefile.am
tests/translatorTests/: CMakeLists.txt
tutorial/: CMakeLists.txt
(+53 files in other folders)
